--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "puppeteer-render",
   "version": "1.0.0",
-  "description": "Puppeteer servisi Render.com için",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "postinstall": "node node_modules/puppeteer/install.js"
   },
   "dependencies": {
     "express": "^4.18.2",
