--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
   "name": "puppeteer-render",
   "version": "1.0.0",
+  "description": "Puppeteer servisi Render.com için",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "postinstall": "node node_modules/puppeteer/install.js"
+    "start": "node index.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "puppeteer": "^21.6.0"
+    "puppeteer": "19.0.0"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": "18.x"
+  },
+  "puppeteer": {
+    "skipDownload": "false"
   }
 }
