--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Puppeteer servisi Render.com için",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "postinstall": "node node_modules/puppeteer/install.js"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -12,8 +13,5 @@
   },
   "engines": {
     "node": "18.x"
-  },
-  "puppeteer": {
-    "skipDownload": "false"
   }
 }
