--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Puppeteer servisi Render.com için",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "postinstall": "node node_modules/puppeteer/install.js"
+    "start": "node index.js"
   },
   "dependencies": {
     "express": "^4.18.2",
